<?xml version="1.0"?>
<package format="3">
  <name>my_slam_config</name><version>1.0.0</version>
  <description>A simple and robust Cartographer SLAM configuration package</description>
  <maintainer email="user@todo.todo">user</maintainer><license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>cartographer_ros</exec_depend><exec_depend>rviz2</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
